cabal-version:      2.4
name:               reflex-dom-ionic
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: BSD-3-Clause
author:             Christoph Bauer
maintainer:         mail@christoph-bauer.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md
    CHANGELOG.md

library
    exposed-modules:  Reflex.Dom.Widget.Ionic

    -- other-modules:

    build-depends:    base >= 4 && < 5
                    , containers
                    , lens
                    , ghcjs-dom
                    , ref-tf
                    , reflex
                    , reflex-dom-core
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall
